--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "node-sass": "^4.7.2",
+    "firebase": "^4.11.0",
+    "jquery-lite": "^2.2.3",
+    "node-sass-chokidar": "^1.1.2",
     "nodemon": "^1.17.2",
     "npm-run-all": "^4.1.2",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
-    "build-css": "node-sass --include-path src src/Styles/Main/index.scss src/Styles/Main/index.css",
+    "build-css": "node-sass-chokidar --include-path src src/Styles/Main/index.scss src/Styles/Main/index.css",
     "watch-css": "nodemon -e scss -x npm-run-all build-css",
-    "start": "react-scripts start npm-run-all watch-css",
-    "testt": "npm-run-all watch-css && npm run react-scripts start",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
     "build": "react-scripts build npm run build-css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
