--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path src src/Styles/Main/index.scss src/Styles/Main/index.css",
+    "build-css": "node-sass-chokidar --source-map src/Styles/Main/index.scss src/Styles/Main/index.css",
     "watch-css": "nodemon -e scss -x npm-run-all build-css",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "react-scripts build npm run build-css",
+    "build": "react-scripts build npm-run-all build-css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
