Cambios en el scripts de deploy

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "watch-css": "nodemon -e scss -x npm-run-all build-css",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "react-scripts build npm-run-all build-css",
-    "deploy": "npm-run-all clean && react-scripts build build-css && firebase deploy",
+    "build": "npm-run-all clean && react-scripts build npm-run-all build-css",
+    "deploy": "npm-run-all build build-css && firebase deploy",
     "install-firebase": "npm i -g firebase-tools && firebase login --interactive && firebase init",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
