--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /src/Styles/Main/index.css
 /src/Styles/Main/index.map
 
+
+
+
 # misc
 .DS_Store
 .env.local
@@ -20,6 +23,9 @@
 .env.test.local
 .env.production.local
 src/**/*.css
+!src/Assets/icons/style.css
+
+
 
 npm-debug.log*
 yarn-debug.log*
