--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "firebase": "^4.9.0",
     "html-react-parser": "^0.4.3",
     "jquery-lite": "^2.2.3",
-    "node-sass-chokidar": "^1.1.2",
     "nodemon": "^1.17.2",
+    "node-sass-chokidar": "^1.3.5",
     "npm-run-all": "^4.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -28,7 +28,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm-run-all clean && react-scripts build npm-run-all build-css",
-    "deploy": "npm-run-all build build-css && firebase deploy",
+    "deploy": "npm-run-all build build-css && firebase deploy --except functions",
     "install-firebase": "npm i -g firebase-tools && firebase login --interactive && firebase init",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
